--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.4",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.1",
+    "@types/react-dom": "^19.1.2",
     "astro": "^5.5.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.1"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.2"
   }
 }
