--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/react-dom": "^19.1.2",
     "astro": "^5.5.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.1"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@types/react": "^19.1.2"
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/react": "^19.1.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8"
   }
 }
