--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@astrojs/react": "^4.2.4",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@gsap/react": "^2.1.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.1",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.5.5",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "remark-slug": "^7.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
